@@ -44,6 +44,8 @@ class DjangoNodeStorage(NodeStorage):
         )
 
     def cleanup(self, cutoff_timestamp):
+        # TODO(dcramer): this should share the efficient bulk deletion
+        # mechanisms
         query = """
         DELETE FROM %s WHERE timestamp <= %%s
         """ % (Node._meta.db_table,)
