@@ -9,6 +9,7 @@ This releases entirely removes Access Groups. If you're upgrading form an instal
 - The legacy (unused) search tables have been removed.
 - Upgrades must now be applied manually via ``sentry upgrade`` or with ``sentry start --upgrade``.
 - ``Event.checksum`` and ``Group.checksum`` have been removed.
+- The ``cleanup`` task has been removed (the command is still available).
 
 Version 7.5.4
 -------------
